セッション作成APIを実装 (#5)
* redisクライアントのモックを追加

* APIのリクエスト/レスポンスのフィールドの必須設定を追加

* セッション作成APIを実装

* APIのテストを追加

* 未実装の関数に対するテストをコメントアウト、バリデーションを別関数に分離

* コメントアウトしたテストを削除

* 重複しているテストケースを削除

* ScaleTypeを定数化

* deferを使ってctrl.Finish()を呼ぶようにテストコードを修正

* リファクタリング

* 内部エラー発生時にエラーログを出力するよう修正
